tests/semantic/fact_empty/fact_empty.dl
// Check whether empty facts are detected
.type Node

.decl reachable   (node1:Node, node2:Node) input
.decl same_clique (node1:Node, node2:Node) input
.decl edge        (node1:Node, node2:Node) input

reachable(X,Y)   :- edge(X,Y).
reachable(X,Y)   :- edge(X,Z), reachable(Z,Y).
same_clique(X,Y) :- reachable(X,Y), reachable(Y,X).

edge( ).

